# paddle-rust-sdk

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml
examples/: address-create.rs  address-get.rs  address-update.rs  addresses-list.rs  adjustment-create.rs  adjustment-credit-note.rs  adjustments-list.rs  business-create.rs  business-get.rs  business-update.rs  businesses-list.rs  customer-auth-token.rs  customer-create.rs  customer-credit-balances.rs  customer-get.rs  customer-portal-session.rs  customer-update.rs  customers-all.rs  customers-list.rs  discount-create.rs  discount-get.rs  discount-update.rs  discounts-list.rs  event-type-list.rs  events-list.rs  payment-method-delete.rs  payment-method-get.rs  payment-methods-list.rs  price-create.rs  price-get.rs  price-update.rs  prices-list.rs  pricing-preview.rs  product-create.rs  product-get.rs  product-update.rs  products-create.rs  products-list.rs  products.rs  report-create.rs  (+22 more)
paddle-rust-sdk-types/: Cargo.toml  README.md
paddle-rust-sdk-types/src/: entities.rs  enums.rs  ids.rs  lib.rs  reports.rs
src/: addresses.rs  adjustments.rs  businesses.rs  customers.rs  discounts.rs  entities.rs  enums.rs  error.rs  events.rs  ids.rs  lib.rs  nullable.rs  paginated.rs  payment_methods.rs  prices.rs  pricing_preview.rs  products.rs  reports.rs  response.rs  subscriptions.rs  transactions.rs  webhooks.rs
