[package]
version = "0.11.0"
name = "paddle-rust-sdk"
description = "Rust SDK for working with the Paddle API in server-side apps. (Unofficial)"
license = "Apache-2.0"
readme = "README.md"
authors = ["Peter Todorov <ptodorov@cytec.bg>"]
keywords = ["payments", "paddle", "finance"]
categories = ["finance", "web-programming"]
repository = "https://github.com/peterprototypes/paddle-rust-sdk"
edition = "2021"

[lib]
doctest = false

[dependencies]
reqwest = { version = "0.12.15", features = ["json"] }
chrono = { version = "0.4.40", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
serde_qs = "0.15.0"
url = "2.5.4"
serde_with = "3.12.0"
sha2 = "0.10.9"
hmac = { version = "0.12.1", features = ["std"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
actix-web = "4"
