[package]
version = "0.14.0"
name = "paddle-rust-sdk"
description = "Rust SDK for working with the Paddle API in server-side apps. (Unofficial)"
license = "Apache-2.0"
readme = "README.md"
authors = ["Peter Todorov <ptodorov@cytec.bg>"]
keywords = ["payments", "paddle", "finance"]
categories = ["finance", "web-programming"]
repository = "https://github.com/peterprototypes/paddle-rust-sdk"
edition = "2021"

[lib]
doctest = false

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "0.15"
url = "2.5"
serde_with = "3.12"
sha2 = "0.10"
hmac = { version = "0.12", features = ["std"] }
strum = { version = ">=0.26,<0.28", features = ["derive"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4"
